# xdg-desktop-portal-gamescope

./: .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson.options
data/: meson.build
src/: main.rs  meson.build  screencast.rs  screenshot.rs
tests/: gamescopectl-fixture.sh  integration.rs  meson.build  test-fixture.sh
