[package]
name = "xdg-desktop-portal-gamescope"
repository = "https://gitlab.igalia.com/otilloy/xdg-desktop-portal-gamescope"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.13.9", features = ["backend", "screencast", "screenshot"] }
async-trait = "0.1.86"
chrono = "0.4.39"
futures-util = "0.3.31"
inotify = "0.11"
log = "0.4.26"
systemd-journal-logger = "0.5.0"
tokio = { version = "1.43.0", features = ["fs", "macros", "net", "process", "rt-multi-thread", "sync"] }
wayland-backend = "0.3.10"
wayland-client = "0.31.10"
wayland-scanner = "0.31.6"
xdg-user = "0.2.1"
