[package]
name = "xdg-desktop-portal-gamescope"
repository = "https://gitlab.igalia.com/otilloy/xdg-desktop-portal-gamescope"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.13.9", features = ["backend", "screencast", "screenshot"] }
async-trait = "0.1.89"
chrono = "0.4.44"
futures-util = "0.3.32"
inotify = "0.11.1"
log = "0.4.29"
systemd-journal-logger = "2.2.2"
tokio = { version = "1.50.0", features = ["fs", "macros", "net", "process", "rt-multi-thread", "sync"] }
wayland-backend = "0.3.14"
wayland-client = "0.31.13"
wayland-scanner = "0.31.9"
xdg-user = "0.2.1"

[dev-dependencies]
assert_cmd = "2.2.0"
serial_test = "3.4.0"
url = "2.5.8"
zbus = "5.13"
